# pkg/ordine/controllers/delete_ordine.go
@@ -9,17 +9,17 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// PostLogin godoc
+// DeleteOrdine godoc
 //
-//	@Summary		Delete ordine
-//	@Description	Delete a ordine by id
-//	@Tags			Ordine
-//	@Accept			json
-//	@Produce		json
-//	@Param			id	path		string	true	"Ordine id"
-//	@Success		200		{object}	utils.GenericResponse
-//	@Failure		400		{object}	utils.GenericResponse
-//	@Router			/ordines/{id} [delete]
+// @Summary		Delete ordine
+// @Description	Delete an ordine based on the given ID
+// @Tags			Ordine
+// @Accept			json
+// @Produce			json
+// @Param			id	path		string	true	"Ordine id"
+// @Success		200		{object}	utils.GenericResponse "Resource deleted successfully"
+// @Failure		400		{object}	utils.GenericResponse "Error trying to delete ordine"
+// @Router			/ordines/{id} [delete]
 func DeleteOrdine(ctx *gin.Context) {
 	err := services.RemoveOrdine(ctx.Param("id"))
 	if err != nil {
