# pkg/routes/ordine.go
@@ -10,7 +10,7 @@ func OrdineRoutes(r *gin.Engine) {
 	r.GET("/ordine", controllers.GetOrdines)
 	r.GET("/ordine/:id", controllers.GetOrdine)
 	r.POST("/ordine", controllers.PostOrdine)
-	r.POST("/ordine/product/:id", controllers.PostProductsToOrdine)
+	r.POST("/ordine/:id/products", controllers.PostProductsToOrdine)
 	r.PUT("/ordine/:id", controllers.PutOrdine)
 	r.DELETE("/ordine/:id", controllers.DeleteOrdine)
 }
